# crfsuite

./: .gitignore  CMakeLists.txt  README  main
frontend/: dump.cpp  learn.cpp  readdata.h  reader.cpp  tag.c  tag.cpp
include/: crfsuite.h
lib/cqdb/: CMakeLists.txt
lib/cqdb/include/: cqdb.h
lib/cqdb/src/: cqdb.cpp
lib/crf/: CMakeLists.txt
lib/crf/src/: crf1d.h  crf1d_context.cpp  crf1d_encode.cpp  crf1d_feature.cpp  crf1d_model.cpp  crf1d_tag.cpp  crfsuite.cpp  crfsuite_internal.h  crfsuite_train.cpp  dataset.cpp  dictionary.cpp  holdout.cpp  logging.h  params.c  rumavl.cpp  train_arow.cpp  train_averaged_perceptron.cpp  train_l2sgd.cpp  train_lbfgs.cpp  train_passive_aggressive.cpp  vecmath.h
